--- a/app/src/main/res/layout/fragment_dineout.xml
+++ b/app/src/main/res/layout/fragment_dineout.xml
@@ -1,17 +1,17 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
-    tools:context=".view.DineoutFragment"
-    android:orientation="vertical">
+    android:orientation="vertical"
+    tools:context=".view.DineoutFragment">
 
     <ScrollView
         android:id="@+id/sv_dineout"
-        android:scrollbars="none"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content">
+        android:layout_height="wrap_content"
+        android:scrollbars="none">
 
         <LinearLayout
             android:layout_width="match_parent"
@@ -20,53 +20,50 @@
 
             <RelativeLayout
                 android:id="@+id/rl_header"
-                android:padding="15sp"
-                android:background="@color/black"
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content">
+                android:layout_height="wrap_content"
+                android:background="@color/black"
+                android:padding="15sp">
 
                 <LinearLayout
-                    android:layout_centerHorizontal="true"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
+                    android:layout_centerHorizontal="true"
                     android:orientation="vertical">
 
                     <LinearLayout
-                        android:gravity="center"
                         android:layout_width="match_parent"
-                        android:layout_height="wrap_content">
+                        android:layout_height="wrap_content"
+                        android:gravity="center">
 
                         <ImageView
-                            android:layout_gravity="center"
-                            android:layout_marginEnd="5sp"
                             android:layout_width="20sp"
                             android:layout_height="20sp"
+                            android:layout_gravity="center"
+                            android:layout_marginEnd="5sp"
                             android:src="@drawable/icon_location">
                         </ImageView>
 
                         <TextView
-                            android:textSize="18sp"
-                            android:paddingTop="5sp"
-                            android:layout_gravity="center"
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
-                            android:textColor="@color/white"
-                            android:textStyle="bold"
+                            android:layout_gravity="center"
                             android:fontFamily="@font/swiggy_font_medium"
-                            android:text="Home">
-                        </TextView>
+                            android:paddingTop="5sp"
+                            android:text="@string/city_location"
+                            android:textColor="@color/white"
+                            android:textSize="18sp"
+                            android:textStyle="bold" />
 
                     </LinearLayout>
 
                     <TextView
-                        android:textSize="14sp"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:textColor="@color/white"
                         android:fontFamily="@font/swiggy_font_light"
-                        android:text="Chennai, Tamil Nadu">
-                    </TextView>
-
+                        android:text="@string/short_location"
+                        android:textColor="@color/white"
+                        android:textSize="14sp" />
 
                 </LinearLayout>
 
@@ -88,80 +85,77 @@
             </ImageView>
 
             <ImageView
-                android:layout_below="@id/iv_dineout_hero"
-                android:layout_marginTop="10sp"
                 android:layout_width="match_parent"
                 android:layout_height="350sp"
+                android:layout_below="@id/iv_dineout_hero"
+                android:layout_marginTop="10sp"
                 android:src="@drawable/dineout_img_body">
+
             </ImageView>
 
             <LinearLayout
-                android:paddingBottom="20sp"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:orientation="vertical">
+                android:orientation="vertical"
+                android:paddingBottom="20sp">
 
                 <LinearLayout
-                    android:paddingStart="10sp"
-                    android:paddingEnd="10sp"
                     android:layout_width="match_parent"
-                    android:layout_height="wrap_content">
+                    android:layout_height="wrap_content"
+                    android:paddingStart="10sp"
+                    android:paddingEnd="10sp">
 
                     <TextView
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
+                        android:fontFamily="@font/swiggy_font_extrabold"
                         android:text="Best offers near you"
                         android:textColor="@color/black"
-                        android:fontFamily="@font/swiggy_font_extrabold"
-                        android:textSize="18sp">
-                    </TextView>
+                        android:textSize="18sp" />
 
                     <TextView
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
+                        android:fontFamily="@font/swiggy_font_medium"
                         android:gravity="end"
                         android:text="SEE ALL"
                         android:textColor="@color/swiggy_orange"
-                        android:fontFamily="@font/swiggy_font_medium"
-                        android:textSize="14sp">
-                    </TextView>
+                        android:textSize="14sp" />
 
                 </LinearLayout>
 
                 <TextView
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
+                    android:fontFamily="@font/swiggy_font_regular"
                     android:paddingStart="10sp"
                     android:text="Restaurants to hang out in your area"
-                    android:fontFamily="@font/swiggy_font_regular"
-                    android:textSize="14sp">
-                </TextView>
+                    android:textSize="14sp" />
 
                 <androidx.recyclerview.widget.RecyclerView
                     android:id="@+id/rv_bestoffers"
-                    android:paddingTop="15sp"
-                    android:paddingBottom="15sp"
                     android:layout_width="match_parent"
-                    android:layout_height="wrap_content">
-                </androidx.recyclerview.widget.RecyclerView>
+                    android:layout_height="wrap_content"
+                    android:paddingTop="15sp"
+                    android:paddingBottom="15sp"></androidx.recyclerview.widget.RecyclerView>
 
             </LinearLayout>
 
             <LinearLayout
-                android:paddingTop="20sp"
-                android:paddingBottom="30sp"
-                android:background="#f1f1f4"
                 android:layout_width="match_parent"
                 android:layout_height="300sp"
-                android:orientation="vertical">
+                android:background="#f1f1f4"
+                android:orientation="vertical"
+                android:paddingTop="20sp"
+                android:paddingBottom="30sp">
 
 
                 <LinearLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
                     android:paddingStart="15sp"
                     android:paddingEnd="15sp"
-                    android:paddingBottom="10sp"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content">
+                    android:paddingBottom="10sp">
 
                     <View
                         android:layout_width="0dp"
@@ -171,24 +165,22 @@
                         android:background="@color/grey"></View>
 
                     <TextView
-                        android:letterSpacing="0.2"
-                        android:layout_weight="1"
-                        android:gravity="center"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:textColor="@color/dark_grey"
-                        android:textStyle="bold"
+                        android:layout_weight="1"
                         android:fontFamily="@font/swiggy_font_extrabold"
-                        android:text="HOTELS &amp; OFFERS">
-                    </TextView>
+                        android:gravity="center"
+                        android:letterSpacing="0.2"
+                        android:text="HOTELS &amp; OFFERS"
+                        android:textColor="@color/dark_grey"
+                        android:textStyle="bold" />
 
                     <View
-                        android:layout_gravity="center"
                         android:layout_width="0dp"
                         android:layout_height="1sp"
+                        android:layout_gravity="center"
                         android:layout_weight="1"
-                        android:background="@color/grey">
-                    </View>
+                        android:background="@color/grey"></View>
 
                 </LinearLayout>
 
@@ -197,56 +189,53 @@
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
                     android:paddingStart="80dp"
-                    android:paddingEnd="80dp">
-                </androidx.viewpager2.widget.ViewPager2>
+                    android:paddingEnd="80dp"></androidx.viewpager2.widget.ViewPager2>
 
             </LinearLayout>
 
             <LinearLayout
-                android:layout_marginTop="15sp"
-                android:paddingBottom="20sp"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:orientation="vertical">
+                android:layout_marginTop="15sp"
+                android:orientation="vertical"
+                android:paddingBottom="20sp">
 
                 <TextView
-                    android:padding="10sp"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:textColor="@color/black"
-                    android:text="More resturants around you"
                     android:fontFamily="@font/swiggy_font_extrabold"
-                    android:textSize="18sp">
-                </TextView>
+                    android:padding="10sp"
+                    android:text="More resturants around you"
+                    android:textColor="@color/black"
+                    android:textSize="18sp" />
 
                 <androidx.recyclerview.widget.RecyclerView
                     android:id="@+id/rv_morearoundyou"
-                    android:nestedScrollingEnabled="false"
                     android:layout_width="match_parent"
-                    android:layout_height="wrap_content">
+                    android:layout_height="wrap_content"
+                    android:nestedScrollingEnabled="false">
                 </androidx.recyclerview.widget.RecyclerView>
 
             </LinearLayout>
 
             <LinearLayout
-                android:padding="30sp"
-                android:background="#f1f1f4"
-                android:gravity="center"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
-                android:orientation="vertical">
+                android:background="#f1f1f4"
+                android:gravity="center"
+                android:orientation="vertical"
+                android:padding="30sp">
 
                 <TextView
                     android:id="@+id/tv_hotel_location"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:gravity="center"
-                    android:textSize="16sp"
+                    android:ellipsize="end"
                     android:fontFamily="@font/swiggy_font_light"
-                    android:text="Thats all for now! :)"
+                    android:gravity="center"
                     android:maxLines="1"
-                    android:ellipsize="end">
-                </TextView>
+                    android:text="@string/end_note"
+                    android:textSize="16sp" />
 
             </LinearLayout>
 
@@ -256,107 +245,102 @@
 
     <LinearLayout
         android:id="@+id/ll_searchbar"
-        android:visibility="gone"
-        android:layout_alignParentTop="true"
-        android:elevation="100sp"
-        android:background="@color/white"
-        android:padding="10sp"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:orientation="vertical">
+        android:layout_alignParentTop="true"
+        android:background="@color/white"
+        android:elevation="100sp"
+        android:orientation="vertical"
+        android:padding="10sp"
+        android:visibility="gone">
 
         <LinearLayout
-            android:gravity="center"
-            android:paddingBottom="10sp"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content">
+            android:layout_height="wrap_content"
+            android:gravity="center"
+            android:paddingBottom="10sp">
 
             <ImageView
-                android:layout_gravity="center"
-                android:layout_marginEnd="5sp"
                 android:layout_width="25sp"
                 android:layout_height="25sp"
-                android:src="@drawable/icon_location">
-            </ImageView>
+                android:layout_gravity="center"
+                android:layout_marginEnd="5sp"
+                android:src="@drawable/icon_location"></ImageView>
 
             <TextView
-                android:textSize="18sp"
-                android:layout_gravity="center"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:textColor="@color/black"
-                android:textStyle="bold"
+                android:layout_gravity="center"
                 android:fontFamily="@font/swiggy_font_medium"
-                android:text="Home, ">
-            </TextView>
+                android:text="Home, "
+                android:textColor="@color/black"
+                android:textSize="18sp"
+                android:textStyle="bold" />
 
             <TextView
-                android:textSize="14sp"
-                android:layout_gravity="center"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:textColor="@color/black"
+                android:layout_gravity="center"
                 android:fontFamily="@font/swiggy_font_light"
-                android:text="Chennai, Tamil Nadu">
-            </TextView>
+                android:text="Chennai, Tamil Nadu"
+                android:textColor="@color/black"
+                android:textSize="14sp" />
 
         </LinearLayout>
+
         <com.google.android.material.card.MaterialCardView
-            android:translationZ="1000sp"
             android:id="@+id/cv_searchbar"
-            app:cardCornerRadius="8sp"
-            app:strokeColor="#f1f1f4"
-            android:elevation="0dp"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content">
+            android:layout_height="wrap_content"
+            android:elevation="0dp"
+            android:translationZ="1000sp"
+            app:cardCornerRadius="8sp"
+            app:strokeColor="#f1f1f4">
 
             <RelativeLayout
-                android:padding="10sp"
-                android:background="#f1f1f4"
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content">
+                android:layout_height="wrap_content"
+                android:background="#f1f1f4"
+                android:padding="10sp">
 
                 <TextView
                     android:id="@+id/tv_search"
-                    android:layout_alignParentStart="true"
-                    android:layout_gravity="center"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
+                    android:layout_alignParentStart="true"
+                    android:layout_gravity="center"
                     android:ellipsize="end"
-                    android:maxLines="1"
-                    android:textSize="16sp"
-                    android:textColor="@color/grey"
                     android:fontFamily="@font/swiggy_font_regular"
-                    android:text="Search for ">
-                </TextView>
+                    android:maxLines="1"
+                    android:text="Search for "
+                    android:textColor="@color/grey"
+                    android:textSize="16sp"></TextView>
 
                 <TextSwitcher
                     android:id="@+id/textSwitcher"
-                    android:layout_toEndOf="@id/tv_search"
-                    android:layout_centerVertical="true"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:textColor="@color/grey"
+                    android:layout_centerVertical="true"
+                    android:layout_toEndOf="@id/tv_search"
                     android:ellipsize="end"
+                    android:fontFamily="@font/swiggy_font_regular"
                     android:inAnimation="@anim/text_slide_to_top"
                     android:outAnimation="@anim/text_slide_from_bottom"
-                    android:fontFamily="@font/swiggy_font_regular" />
+                    android:textColor="@color/grey" />
 
                 <ImageView
-                    android:layout_toStartOf="@id/iv_mic"
-                    android:layout_marginEnd="10sp"
                     android:layout_width="20sp"
                     android:layout_height="20sp"
-                    android:src="@drawable/icon_search">
-                </ImageView>
+                    android:layout_marginEnd="10sp"
+                    android:layout_toStartOf="@id/iv_mic"
+                    android:src="@drawable/icon_search"></ImageView>
 
                 <ImageView
                     android:id="@+id/iv_mic"
-                    android:layout_alignParentEnd="true"
                     android:layout_width="20sp"
                     android:layout_height="20sp"
-                    android:src="@drawable/icon_mic">
-                </ImageView>
+                    android:layout_alignParentEnd="true"
+                    android:src="@drawable/icon_mic"></ImageView>
 
             </RelativeLayout>
 
