--- a/app/src/main/res/layout/fragment_food.xml
+++ b/app/src/main/res/layout/fragment_food.xml
@@ -42,8 +42,16 @@
                     android:textColor="@color/black"
                     android:textStyle="bold"
                     android:fontFamily="@font/swiggy_font_medium"
-                    android:text="Home">
+                    android:text="@string/city_location">
                 </TextView>
+
+                <ImageView
+                    android:layout_width="10sp"
+                    android:layout_height="10sp"
+                    android:layout_gravity="center"
+                    android:layout_marginStart="5sp"
+                    android:src="@drawable/icon_downarrow">
+                </ImageView>
 
             </LinearLayout>
 
@@ -53,7 +61,7 @@
                 android:layout_height="wrap_content"
                 android:textColor="@color/grey"
                 android:fontFamily="@font/swiggy_font_light"
-                android:text="1/422E, Kulattur, Chennai, Tamil Nadu">
+                android:text="@string/current_location">
             </TextView>
 
 
@@ -431,7 +439,7 @@
                     android:gravity="center"
                     android:textSize="16sp"
                     android:fontFamily="@font/swiggy_font_light"
-                    android:text="Thats all for now! :)"
+                    android:text="@string/end_note"
                     android:maxLines="1"
                     android:ellipsize="end">
                 </TextView>
