--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -4,6 +4,7 @@
     <color name="white">#FFFFFFFF</color>
     <color name="swiggy_orange">#F06414</color>
     <color name="grey">#8D8E91</color>
+    <color name="light_grey">#CDD3D3D3</color>
     <color name="dark_grey">#6E6F74</color>
     <color name="bg_pink">#FEdBDc</color>
     <color name="bg_violet">#E6E1FC</color>
