--- a/app/src/main/res/layout/food_verti_card.xml
+++ b/app/src/main/res/layout/food_verti_card.xml
@@ -1,93 +1,88 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:orientation="horizontal"
-    android:layout_marginBottom="15sp"
     android:layout_width="match_parent"
-    android:layout_height="wrap_content">
+    android:layout_height="wrap_content"
+    android:layout_marginBottom="15sp"
+    android:orientation="horizontal">
 
     <com.google.android.material.card.MaterialCardView
-        app:cardCornerRadius="12sp"
-        app:strokeWidth="0sp"
         android:layout_width="wrap_content"
-        android:layout_height="wrap_content">
+        android:layout_height="wrap_content"
+        app:cardCornerRadius="12sp"
+        app:strokeWidth="0sp">
+
         <ImageView
             android:id="@+id/iv_food"
             android:layout_width="160sp"
             android:layout_height="160sp"
-            android:src="@drawable/verti_img_1">
-        </ImageView>
+            android:src="@drawable/verti_img_1" />
     </com.google.android.material.card.MaterialCardView>
 
     <LinearLayout
-        android:paddingTop="8sp"
-        android:paddingBottom="8sp"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:orientation="vertical">
+        android:orientation="vertical"
+        android:paddingTop="8sp"
+        android:paddingBottom="8sp">
 
         <TextView
             android:id="@+id/tv_hotel_name"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:ellipsize="end"
+            android:fontFamily="@font/swiggy_font_medium"
             android:gravity="start"
+            android:maxLines="1"
             android:text="Salem RR Briyani"
             android:textColor="@color/black"
-            android:textStyle="bold"
             android:textSize="20sp"
-            android:fontFamily="@font/swiggy_font_medium"
-            android:maxLines="1"
-            android:ellipsize="end">
-        </TextView>
+            android:textStyle="bold" />
 
         <LinearLayout
-            android:gravity="start"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content">
+            android:layout_height="wrap_content"
+            android:gravity="start">
 
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:textSize="16sp"
                 android:fontFamily="@font/swiggy_font_medium"
-                android:text="⭐">
-            </TextView>
+                android:text="⭐"
+                android:textSize="16sp" />
 
             <TextView
                 android:id="@+id/tv_rating"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
+                android:layout_gravity="center"
+                android:fontFamily="@font/swiggy_font_medium"
                 android:paddingLeft="3sp"
                 android:paddingRight="3sp"
-                android:layout_gravity="center"
+                android:text="3.8"
                 android:textColor="@color/black"
-                android:fontFamily="@font/swiggy_font_medium"
-                android:textSize="16sp"
-                android:text="3.8">
-            </TextView>
+                android:textSize="16sp" />
 
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_gravity="center"
-                android:textColor="@color/black"
                 android:fontFamily="@font/swiggy_font_medium"
-                android:textSize="16sp"
-                android:text="•">
-            </TextView>
+                android:text="•"
+                android:textColor="@color/black"
+                android:textSize="16sp" />
 
             <TextView
                 android:id="@+id/tv_time"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
+                android:layout_gravity="center"
+                android:fontFamily="@font/swiggy_font_medium"
                 android:paddingLeft="3sp"
                 android:paddingRight="3sp"
-                android:layout_gravity="center"
+                android:text="20 mins"
                 android:textColor="@color/black"
-                android:fontFamily="@font/swiggy_font_medium"
-                android:textSize="16sp"
-                android:text="20 mins">
-            </TextView>
+                android:textSize="16sp" />
 
 
         </LinearLayout>
@@ -96,30 +91,27 @@
             android:id="@+id/tv_type"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:textSize="16sp"
+            android:ellipsize="end"
             android:fontFamily="@font/swiggy_font_light"
-            android:text="Briyani, Pizza"
             android:maxLines="1"
-            android:ellipsize="end">
-        </TextView>
+            android:text="Briyani, Pizza"
+            android:textSize="16sp" />
 
         <TextView
             android:id="@+id/tv_hotel_location"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:textSize="16sp"
+            android:ellipsize="end"
             android:fontFamily="@font/swiggy_font_light"
-            android:text="Medavakkam, 3.0 km"
             android:maxLines="1"
-            android:ellipsize="end">
-        </TextView>
+            android:text="Medavakkam, 3.0 km"
+            android:textSize="16sp" />
 
         <ImageView
             android:id="@+id/iv_offer"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:src="@drawable/img_extra10">
-        </ImageView>
+            android:src="@drawable/img_extra10" />
 
     </LinearLayout>
 
