--- a/app/src/main/res/layout/fragment_genie.xml
+++ b/app/src/main/res/layout/fragment_genie.xml
@@ -29,8 +29,7 @@
                     android:layout_height="20sp"
                     android:layout_gravity="center"
                     android:layout_marginEnd="5sp"
-                    android:src="@drawable/icon_location">
-                </ImageView>
+                    android:src="@drawable/icon_location" />
 
                 <TextView
                     android:layout_width="wrap_content"
@@ -41,15 +40,14 @@
                     android:text="@string/city_location"
                     android:textColor="@color/black"
                     android:textSize="18sp"
-                    android:textStyle="bold"/>
+                    android:textStyle="bold" />
 
                 <ImageView
                     android:layout_width="10sp"
                     android:layout_height="10sp"
                     android:layout_gravity="center"
                     android:layout_marginStart="5sp"
-                    android:src="@drawable/icon_downarrow">
-                </ImageView>
+                    android:src="@drawable/icon_downarrow" />
 
             </LinearLayout>
 
@@ -59,7 +57,7 @@
                 android:fontFamily="@font/swiggy_font_light"
                 android:text="@string/current_location"
                 android:textColor="@color/grey"
-                android:textSize="14sp"/>
+                android:textSize="14sp" />
 
 
         </LinearLayout>
@@ -72,16 +70,12 @@
 
             <com.google.android.material.card.MaterialCardView
                 android:layout_width="wrap_content"
-                android:layout_height="wrap_content">
-
-
-            </com.google.android.material.card.MaterialCardView>
+                android:layout_height="wrap_content" />
 
             <ImageView
                 android:layout_width="45sp"
                 android:layout_height="45sp"
-                android:src="@drawable/profile_dp_colored">
-            </ImageView>
+                android:src="@drawable/profile_dp_colored" />
 
         </LinearLayout>
 
@@ -91,8 +85,7 @@
         android:layout_width="match_parent"
         android:layout_height="30sp"
         android:layout_marginTop="60sp"
-        android:background="#e6e1fc">
-    </LinearLayout>
+        android:background="#e6e1fc" />
 
     <ScrollView
         android:id="@+id/sv_genie"
@@ -114,8 +107,7 @@
                 <ImageView
                     android:layout_width="match_parent"
                     android:layout_height="300sp"
-                    android:src="@drawable/genie_banner">
-                </ImageView>
+                    android:src="@drawable/genie_banner" />
 
             </LinearLayout>
 
@@ -162,7 +154,7 @@
                             android:text="Upto 25% off on first order"
                             android:textColor="@color/black"
                             android:textSize="18sp"
-                            android:textStyle="bold"/>
+                            android:textStyle="bold" />
 
                         <TextView
                             android:layout_width="match_parent"
@@ -174,7 +166,7 @@
                             android:text="USE CODEGENIE AT CHECKOUT"
                             android:textColor="@color/grey"
                             android:textSize="14sp"
-                            android:textStyle="bold"/>
+                            android:textStyle="bold" />
 
 
                     </LinearLayout>
@@ -208,7 +200,7 @@
                         android:text="Pick up or send anything"
                         android:textColor="@color/black"
                         android:textSize="18sp"
-                        android:textStyle="bold"/>
+                        android:textStyle="bold" />
 
                     <TextView
                         android:id="@+id/tv_type"
@@ -221,7 +213,7 @@
                         android:paddingBottom="5sp"
                         android:text="Sit back, relax and let Genie do the rest"
                         android:textColor="@color/grey"
-                        android:textSize="14sp"/>
+                        android:textSize="14sp" />
 
                     <com.google.android.material.card.MaterialCardView
                         android:layout_width="match_parent"
@@ -244,8 +236,7 @@
                                 android:gravity="start"
                                 android:text="Set pickup &amp; drop location"
                                 android:textColor="@color/white"
-                                android:textSize="18sp"/>
-
+                                android:textSize="18sp" />
 
                         </LinearLayout>
 
@@ -276,8 +267,7 @@
                         android:layout_height="1dp"
                         android:layout_gravity="center"
                         android:layout_weight="1"
-                        android:background="@color/grey">
-                    </View>
+                        android:background="@color/grey" />
 
                     <TextView
                         android:layout_width="wrap_content"
@@ -288,15 +278,14 @@
                         android:letterSpacing="0.2"
                         android:text="MORE WITH GENIE"
                         android:textColor="@color/dark_grey"
-                        android:textStyle="bold"/>
+                        android:textStyle="bold" />
 
                     <View
                         android:layout_width="0dp"
                         android:layout_height="1sp"
                         android:layout_gravity="center"
                         android:layout_weight="1"
-                        android:background="@color/grey">
-                    </View>
+                        android:background="@color/grey" />
 
                 </LinearLayout>
 
@@ -305,8 +294,7 @@
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
                     android:paddingStart="80dp"
-                    android:paddingEnd="80dp">
-                </androidx.viewpager2.widget.ViewPager2>
+                    android:paddingEnd="80dp" />
 
             </LinearLayout>
 
