--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -47,8 +47,7 @@
                     android:layout_height="10sp"
                     android:layout_gravity="center"
                     android:layout_marginStart="5sp"
-                    android:src="@drawable/icon_downarrow">
-                </ImageView>
+                    android:src="@drawable/icon_downarrow" />
 
             </LinearLayout>
 
@@ -312,7 +311,7 @@
 
             </RelativeLayout>
 
-<!--            offers (dynamically added) -->
+            <!--   offers (dynamically added) -->
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="200sp"
@@ -336,7 +335,7 @@
                 android:orientation="vertical"
                 android:padding="10sp">
 
-<!--                Discover Nearby Headline -->
+                <!--                Discover Nearby Headline -->
                 <LinearLayout
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
