--- a/app/src/main/res/layout/instamart_card.xml
+++ b/app/src/main/res/layout/instamart_card.xml
@@ -1,116 +1,108 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:orientation="vertical"
-    android:background="@color/white"
+    android:layout_width="wrap_content"
+    android:layout_height="wrap_content"
     android:layout_marginStart="10sp"
     android:layout_marginEnd="10sp"
-    android:layout_width="wrap_content"
-    android:layout_height="wrap_content">
+    android:background="@color/white"
+    android:orientation="vertical">
 
     <ImageView
         android:id="@+id/iv_product_image"
         android:layout_width="150sp"
         android:layout_height="110sp"
-        android:src="@drawable/instamart_hori_1">
-    </ImageView>
+        android:src="@drawable/instamart_hori_1" />
 
     <TextView
         android:id="@+id/product_company"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:textSize="14sp"
+        android:fontFamily="@font/swiggy_font_regular"
         android:text="Britannia"
         android:textColor="@color/grey"
-        android:fontFamily="@font/swiggy_font_regular">
-    </TextView>
+        android:textSize="14sp" />
 
     <TextView
         android:id="@+id/product_name"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:ellipsize="end"
+        android:fontFamily="@font/swiggy_font_regular"
         android:maxLines="1"
-        android:textSize="16sp"
         android:text="Brown Bread"
         android:textColor="@color/black"
-        android:textStyle="bold"
-        android:fontFamily="@font/swiggy_font_regular">
-    </TextView>
+        android:textSize="16sp"
+        android:textStyle="bold" />
 
     <TextView
         android:id="@+id/product_name_tamil"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:ellipsize="end"
+        android:fontFamily="@font/swiggy_font_regular"
         android:maxLines="1"
-        android:textSize="14sp"
         android:text="(Vaazhaipalam)"
         android:textColor="@color/black"
-        android:fontFamily="@font/swiggy_font_regular">
-    </TextView>
+        android:textSize="14sp" />
 
     <TextView
         android:id="@+id/product_weight"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:textSize="12sp"
+        android:fontFamily="@font/swiggy_font_regular"
         android:text="2 kg"
         android:textColor="@color/grey"
-        android:fontFamily="@font/swiggy_font_regular">
-    </TextView>
+        android:textSize="12sp" />
 
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content">
 
         <LinearLayout
-            android:layout_weight="1"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:layout_weight="1"
             android:orientation="vertical">
 
             <TextView
                 android:id="@+id/tv_orgprice"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:textSize="10sp"
                 android:fontFamily="@font/swiggy_font_light"
-                android:text="35">
-            </TextView>
+                android:text="35"
+                android:textSize="10sp" />
 
             <TextView
                 android:id="@+id/tv_disprice"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:textColor="@color/black"
-                android:textStyle="bold"
-                android:textSize="12sp"
                 android:fontFamily="@font/swiggy_font_regular"
-                android:text="35">
-            </TextView>
+                android:text="35"
+                android:textColor="@color/black"
+                android:textSize="12sp"
+                android:textStyle="bold" />
 
         </LinearLayout>
 
         <LinearLayout
-            android:layout_weight="1"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content">
+            android:layout_height="wrap_content"
+            android:layout_weight="1">
 
             <com.google.android.material.card.MaterialCardView
-                app:cardCornerRadius="5sp"
                 android:layout_width="match_parent"
-                android:layout_height="match_parent">
+                android:layout_height="match_parent"
+                app:cardCornerRadius="5sp">
 
                 <TextView
-                    android:padding="5sp"
-                    android:layout_gravity="center"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
+                    android:layout_gravity="center"
+                    android:padding="5sp"
                     android:text="ADD"
                     android:textColor="#1ca571"
-                    android:textStyle="bold">
-                </TextView>
+                    android:textStyle="bold" />
 
             </com.google.android.material.card.MaterialCardView>
 
