--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -62,17 +62,16 @@
         </LinearLayout>
 
         <LinearLayout
+            android:id="@+id/profile_icon"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_alignParentEnd="true"
             android:layout_centerVertical="true">
 
-            <com.google.android.material.card.MaterialCardView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content">
-
-
-            </com.google.android.material.card.MaterialCardView>
+            <!--            <com.google.android.material.card.MaterialCardView-->
+            <!--                android:layout_width="wrap_content"-->
+            <!--                android:layout_height="wrap_content">-->
+            <!--        </com.google.android.material.card.MaterialCardView>-->
 
             <ImageView
                 android:layout_width="45sp"
