--- a/app/src/main/res/layout/fragment_profile.xml
+++ b/app/src/main/res/layout/fragment_profile.xml
@@ -1,306 +1,104 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:orientation="vertical"
+    android:background="@color/profileBackground"
+    android:fitsSystemWindows="true"
     tools:context=".view.ProfileFragment">
 
-    <RelativeLayout
-        android:id="@+id/rl_header"
+    <com.google.android.material.appbar.AppBarLayout
+        android:id="@+id/app_bar"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:background="#e6e1fc"
-        android:padding="10sp">
+        android:fitsSystemWindows="true"
+        android:theme="@style/AppTheme.AppBarOverlay">
 
-        <LinearLayout
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_alignParentStart="true"
-            android:orientation="vertical">
+        <com.google.android.material.appbar.CollapsingToolbarLayout
+            android:id="@+id/toolbar_layout"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:fitsSystemWindows="true"
+            app:contentScrim="@color/profilePrimaryDark"
+            app:expandedTitleMarginEnd="64dp"
+            app:expandedTitleMarginStart="48dp"
+            app:expandedTitleTextAppearance="@style/TransparentText"
+            app:layout_scrollFlags="scroll|exitUntilCollapsed"
+            app:toolbarId="@+id/toolbar">
 
             <LinearLayout
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content">
+                android:id="@+id/linearLayout"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_centerInParent="true"
+                android:background="@drawable/profile_bk"
+                android:gravity="center_horizontal"
+                android:orientation="vertical">
 
                 <ImageView
-                    android:layout_width="20sp"
-                    android:layout_height="20sp"
-                    android:layout_gravity="center"
-                    android:layout_marginEnd="5sp"
-                    android:src="@drawable/icon_location" />
+                    android:layout_width="120sp"
+                    android:layout_height="120sp"
+                    android:layout_marginTop="10sp"
+                    android:src="@drawable/profile_dp_colored" />
 
                 <TextView
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:layout_gravity="center"
-                    android:fontFamily="@font/swiggy_font_medium"
-                    android:paddingTop="5sp"
-                    android:text="@string/city_location"
-                    android:textColor="@color/black"
-                    android:textSize="18sp"
+                    android:text="@string/username"
+                    android:textSize="28dp"
                     android:textStyle="bold" />
 
-                <ImageView
-                    android:layout_width="10sp"
-                    android:layout_height="10sp"
-                    android:layout_gravity="center"
-                    android:layout_marginStart="5sp"
-                    android:src="@drawable/icon_downarrow" />
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="@string/email"
+                    android:textSize="12dp"
+                    android:textStyle="bold" />
 
-            </LinearLayout>
-
-            <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:fontFamily="@font/swiggy_font_light"
-                android:text="@string/current_location"
-                android:textColor="@color/grey"
-                android:textSize="14sp" />
-
-
-        </LinearLayout>
-
-        <LinearLayout
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_alignParentEnd="true"
-            android:layout_centerVertical="true">
-
-            <com.google.android.material.card.MaterialCardView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content" />
-
-            <ImageView
-                android:layout_width="45sp"
-                android:layout_height="45sp"
-                android:src="@drawable/profile_dp_colored" />
-
-        </LinearLayout>
-
-    </RelativeLayout>
-
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="30sp"
-        android:layout_marginTop="60sp"
-        android:background="#e6e1fc" />
-
-    <ScrollView
-        android:id="@+id/sv_genie"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:layout_below="@id/rl_header"
-        android:scrollbars="none">
-
-        <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:orientation="vertical">
-
-            <LinearLayout
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_marginBottom="15sp">
-
-                <ImageView
-                    android:layout_width="match_parent"
-                    android:layout_height="300sp"
-                    android:src="@drawable/genie_banner" />
-
-            </LinearLayout>
-
-            <com.google.android.material.card.MaterialCardView
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_marginStart="15sp"
-                android:layout_marginTop="15sp"
-                android:layout_marginEnd="15sp"
-                android:layout_marginBottom="5sp"
-                app:cardCornerRadius="12sp"
-                app:cardElevation="5sp">
-
-                <LinearLayout
+                <RelativeLayout
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:padding="10sp">
-
-                    <com.airbnb.lottie.LottieAnimationView
-                        android:layout_width="60sp"
-                        android:layout_height="60sp"
-                        app:lottie_autoPlay="true"
-                        app:lottie_loop="true"
-                        app:lottie_rawRes="@raw/anim_offer"
-                        app:lottie_speed="1">
-
-                    </com.airbnb.lottie.LottieAnimationView>
-
-                    <LinearLayout
-                        android:layout_width="match_parent"
-                        android:layout_height="match_parent"
-                        android:gravity="center"
-                        android:orientation="vertical"
-                        android:paddingStart="10sp"
-                        android:paddingEnd="10sp">
-
-                        <TextView
-                            android:layout_width="match_parent"
-                            android:layout_height="wrap_content"
-                            android:ellipsize="end"
-                            android:fontFamily="@font/swiggy_font_medium"
-                            android:gravity="start"
-                            android:maxLines="1"
-                            android:text="Upto 25% off on first order"
-                            android:textColor="@color/black"
-                            android:textSize="18sp"
-                            android:textStyle="bold" />
-
-                        <TextView
-                            android:layout_width="match_parent"
-                            android:layout_height="wrap_content"
-                            android:ellipsize="end"
-                            android:fontFamily="@font/swiggy_font_medium"
-                            android:gravity="start"
-                            android:maxLines="1"
-                            android:text="USE CODEGENIE AT CHECKOUT"
-                            android:textColor="@color/grey"
-                            android:textSize="14sp"
-                            android:textStyle="bold" />
-
-
-                    </LinearLayout>
-
-                </LinearLayout>
-
-            </com.google.android.material.card.MaterialCardView>
-
-            <com.google.android.material.card.MaterialCardView
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_margin="15sp"
-                app:cardCornerRadius="12sp"
-                app:cardElevation="5sp">
-
-                <LinearLayout
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:orientation="vertical"
-                    android:padding="15sp">
-
-                    <TextView
-                        android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
-                        android:ellipsize="end"
-                        android:fontFamily="@font/swiggy_font_medium"
-                        android:gravity="start"
-                        android:maxLines="1"
-                        android:paddingTop="5sp"
-                        android:paddingBottom="5sp"
-                        android:text="Pick up or send anything"
-                        android:textColor="@color/black"
-                        android:textSize="18sp"
-                        android:textStyle="bold" />
-
-                    <TextView
-                        android:id="@+id/tv_type"
-                        android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
-                        android:ellipsize="end"
-                        android:fontFamily="@font/swiggy_font_light"
-                        android:maxLines="1"
-                        android:paddingTop="5sp"
-                        android:paddingBottom="5sp"
-                        android:text="Sit back, relax and let Genie do the rest"
-                        android:textColor="@color/grey"
-                        android:textSize="14sp" />
-
-                    <com.google.android.material.card.MaterialCardView
-                        android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
-                        android:layout_marginTop="5sp"
-                        android:layout_marginBottom="5sp"
-                        android:backgroundTint="@color/swiggy_orange"
-                        app:cardCornerRadius="10sp"
-                        app:strokeColor="@color/swiggy_orange">
-
-                        <LinearLayout
-                            android:layout_width="match_parent"
-                            android:layout_height="wrap_content"
-                            android:padding="12sp">
-
-                            <TextView
-                                android:layout_width="wrap_content"
-                                android:layout_height="wrap_content"
-                                android:fontFamily="@font/swiggy_font_medium"
-                                android:gravity="start"
-                                android:text="Set pickup &amp; drop location"
-                                android:textColor="@color/white"
-                                android:textSize="18sp" />
-
-                        </LinearLayout>
-
-                    </com.google.android.material.card.MaterialCardView>
-                </LinearLayout>
-
-            </com.google.android.material.card.MaterialCardView>
-
-            <LinearLayout
-                android:layout_width="match_parent"
-                android:layout_height="300sp"
-                android:layout_marginTop="25sp"
-                android:background="#f1f1f4"
-                android:orientation="vertical"
-                android:paddingTop="20sp"
-                android:paddingBottom="30sp">
-
-
-                <LinearLayout
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:paddingStart="15sp"
-                    android:paddingEnd="15sp"
-                    android:paddingBottom="10sp">
+                    android:layout_gravity="bottom"
+                    android:layout_marginTop="20dp"
+                    android:background="@color/profileBackground"
+                    android:gravity="center">
 
                     <View
-                        android:layout_width="0dp"
-                        android:layout_height="1dp"
-                        android:layout_gravity="center"
-                        android:layout_weight="1"
-                        android:background="@color/grey" />
+                        android:layout_width="match_parent"
+                        android:layout_height="30dp"
+                        android:layout_alignParentTop="true"
+                        android:background="@drawable/profile_bk" />
 
-                    <TextView
+                    <ImageView
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:layout_weight="1"
-                        android:fontFamily="@font/swiggy_font_extrabold"
-                        android:gravity="center"
-                        android:letterSpacing="0.2"
-                        android:text="MORE WITH GENIE"
-                        android:textColor="@color/dark_grey"
-                        android:textStyle="bold" />
+                        android:background="@drawable/profile_back_button"
+                        android:textAlignment="center"
+                        android:paddingLeft="30dp"
+                        android:paddingRight="50dp"
+                        android:paddingTop="10dp"
+                        android:paddingBottom="10dp"
+                        android:src="@drawable/back_to_home_button"
+                        android:layout_centerHorizontal="true"
+                        android:layout_alignParentTop="true"
+                        android:minWidth="250dp" />
 
-                    <View
-                        android:layout_width="0dp"
-                        android:layout_height="1sp"
-                        android:layout_gravity="center"
-                        android:layout_weight="1"
-                        android:background="@color/grey" />
-
-                </LinearLayout>
-
-                <androidx.viewpager2.widget.ViewPager2
-                    android:id="@+id/genie_viewpager"
-                    android:layout_width="match_parent"
-                    android:layout_height="match_parent"
-                    android:paddingStart="80dp"
-                    android:paddingEnd="80dp" />
+                </RelativeLayout>
 
             </LinearLayout>
 
-        </LinearLayout>
+            <androidx.appcompat.widget.Toolbar
+                android:id="@+id/toolbar"
+                android:layout_width="match_parent"
+                android:layout_height="?attr/actionBarSize"
+                app:layout_collapseMode="pin"
+                app:popupTheme="@style/AppTheme.PopupOverlay" />
+
+        </com.google.android.material.appbar.CollapsingToolbarLayout>
+    </com.google.android.material.appbar.AppBarLayout>
+
+    <include layout="@layout/content_profile" />
 
 
-    </ScrollView>
-
-</RelativeLayout>
+</androidx.coordinatorlayout.widget.CoordinatorLayout>
