--- a/app/src/main/res/navigation/app_navigation.xml
+++ b/app/src/main/res/navigation/app_navigation.xml
@@ -9,7 +9,15 @@
         android:id="@+id/homeFragment"
         android:name="com.example.nearbylocator.view.HomeFragment"
         android:label="fragment_home"
-        tools:layout="@layout/fragment_home" />
+        tools:layout="@layout/fragment_home">
+        <action
+            android:id="@+id/action_homeFragment_to_profileFragment"
+            app:destination="@id/profileFragment"
+            app:popUpTo="@id/homeFragment"
+            app:popUpToInclusive="true" />
+
+    </fragment>
+
     <fragment
         android:id="@+id/serviceFragment"
         android:name="com.example.nearbylocator.view.ServiceFragment"
